<resources>
    <string name="app_name">FocusVault</string>
    <string name="nav_today">Сегодня</string>
    <string name="nav_notes">Заметки</string>
    <string name="nav_calendar">Календарь</string>
    <string name="nav_focus">Фокус</string>
    <string name="nav_profile">Профиль</string>

    <string name="add_task">Добавить задачу</string>
    <string name="edit_task">Изменить</string>
    <string name="delete_task">Удалить</string>
    <string name="delete_task_confirm">Удалить задачу "%1$s"?</string>

    <string name="add_note">Добавить заметку</string>
    <string name="edit_note">Редактировать</string>
    <string name="delete_note">Удалить</string>

    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="hint_task_title">Название задачи</string>
    <string name="hint_task_priority">Приоритет (1-10)</string>
    <string name="hint_note_title">Заголовок заметки</string>
    <string name="hint_note_content">Содержимое заметки</string>

    <string name="today_pomodoro_count">Помидоров сегодня: %1$d</string>
    <string name="today_completed_count">Выполнено задач: %1$d</string>
    <string name="priority_value">Приоритет: %1$d</string>

    <string name="tasks_progress_label">Прогресс задач</string>
    <string name="pomodoro_progress_label">Прогресс помидоров</string>
    <string name="pomodoro_progress_percent">Готово: %1$d%% (%2$d из %3$d)</string>

    <string name="start">Старт</string>
    <string name="start_resume">Продолжить</string>
    <string name="start_running">Идёт…</string>
    <string name="pause">Пауза</string>
    <string name="reset">Сброс</string>

    <string name="no_tasks_for_today">Добавьте хотя бы одну задачу на сегодня перед запуском таймера.</string>
    <string name="select_task">Выберите задачу</string>
    <string name="pomodoro_completed_with_break">Сессия завершена! Рекомендуемый перерыв: %1$d мин. Длинный перерыв: %2$d мин.</string>

    <string name="today_focus_title">Сегодняшний прогресс</string>
    <string name="today_tasks_header">Задачи на сегодня</string>
    <string name="task_progress_percent">Готово: %1$d%% (%2$d из %3$d)</string>
    <string name="no_tasks_yet">Пока нет задач на сегодня</string>

    <string name="focus_mode">Режим фокуса</string>
    <string name="focus_timer_settings_info">Текущие настройки: работа %1$d мин, короткий перерыв %2$d мин, длинный перерыв %3$d мин.</string>
    <string name="focus_selected_task_none">Выбранная задача: не выбрана</string>
    <string name="focus_selected_task">Выбранная задача: %1$s</string>
    <string name="focus_sessions_today">Завершённых сессий сегодня: %1$d</string>

    <string name="focus_phase_work">Сейчас: работа</string>
    <string name="focus_phase_break">Сейчас: перерыв</string>
    <string name="focus_work_finished_title">Рабочая сессия завершена</string>
    <string name="focus_work_finished_text">Выберите короткий или длинный перерыв.</string>
    <string name="focus_start_break_action">Начать перерыв</string>
    <string name="focus_start_break_confirm">Сессия завершена. Начать перерыв на %1$d мин?</string>
    <string name="focus_start_short_break_action">Короткий перерыв</string>
    <string name="focus_start_long_break_action">Длинный перерыв</string>
    <string name="focus_start_break_type_confirm">Выберите тип перерыва: короткий (%1$d мин) или длинный (%2$d мин).</string>
    <string name="focus_break_started_title">Перерыв начат</string>
    <string name="focus_break_started_text">Перерыв на %1$d мин уже запущен.</string>
    <string name="focus_break_finished_title">Перерыв завершен</string>
    <string name="focus_break_finished_text">Перерыв закончился. Можно возвращаться к фокусу.</string>
    <string name="focus_notification_work_title">Фокус: рабочая сессия</string>
    <string name="focus_notification_break_title">Фокус: перерыв</string>
    <string name="focus_notification_running">Таймер запущен</string>
    <string name="focus_notification_paused">Таймер на паузе</string>
    <string name="search_notes">Поиск по заметкам</string>
    <string name="notes_empty">Заметок не найдено</string>
    <string name="notes_for_date">Заметки за выбранный день</string>

    <string name="theme_dark">Тёмная тема</string>
    <string name="notifications_enable">Ежедневные уведомления</string>
    <string name="notification_time">Время уведомления (часы/минуты)</string>
    <string name="settings_general">Общие настройки</string>
    <string name="settings_timer">Гибкие настройки таймера</string>
    <string name="work_minutes">Рабочий интервал (мин)</string>
    <string name="break_minutes">Короткий перерыв (мин)</string>
    <string name="long_break_minutes">Длинный перерыв (мин)</string>
    <string name="daily_goal_pomodoro">Цель на день (помидоры)</string>
    <string name="save_timer_settings">Сохранить настройки</string>
    <string name="timer_settings_saved">Настройки сохранены</string>

    <string name="reset_data">Сбросить все данные</string>
    <string name="reset_data_confirm">Это удалит все задачи, заметки и сессии. Продолжить?</string>
    <string name="data_reset_done">Данные удалены</string>

    <string name="reminder_channel_name">Напоминания FocusVault</string>
    <string name="reminder_channel_desc">Ежедневные напоминания о фокус-сессии</string>
    <string name="reminder_title">Время сфокусироваться</string>
    <string name="reminder_text">Сделайте одну помидорку и закройте важную задачу.</string>

    <string name="help_today">Добавляйте задачи и отслеживайте прогресс по задачам и по помидорам. Цель на день меняется в Профиле.</string>
    <string name="help_notes">Это быстрый список заметок и поиск. Просмотр по датам и статистика вынесены во вкладку «Календарь».</string>
    <string name="help_focus">Выберите задачу и нажмите старт. Параметры таймера настраиваются в Профиле.</string>
    <string name="help_calendar">Выберите день в календаре: увидите заметки за дату и подробную статистику за этот день.</string>
    <string name="hide_help">Понятно, скрыть</string>

    <string name="stats_date">Дата: %1$s</string>
    <string name="stats_tasks">Задачи: %1$d из %2$d выполнено</string>
    <string name="stats_pomodoro">Помидоры: %1$d</string>
    <string name="stats_notes">Заметки: %1$d</string>
    <string name="delete_note_confirm">Удалить заметку "%1$s"?</string>
    <string name="timer_settings_reset_confirm">Изменения таймера сбросят текущую сессию фокуса. Сохранить?</string>
    <string name="show_calendar">Показать календарь и статистику</string>
    <string name="hide_calendar">Скрыть календарь и статистику</string>
    <string name="send_test_notification">Отправить тестовое уведомление</string>
    <string name="notification_test_sent">Тестовое уведомление отправлено</string>
</resources>
